--- a/layouts/partials/content.pug
+++ b/layouts/partials/content.pug
@@ -8,14 +8,11 @@ html
                         input(type='file', name='file')
                         input(type='submit', value='Upload!')
 
-                p
-                    | A black page template with a minimal dependency assets to use as a base for any custom page you create
             // END PAGE BASE CONTENT
         // BEGIN FOOTER
-        p.copyright-v2
-            | 2016 © Metronic Theme By
-            a(target='_blank', href='http://keenthemes.com') Keenthemes
-            a(href='http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes', title='Purchase Metronic just for 27$ and get lifetime updates for free', target='_blank') Purchase Metronic!
+        p.copyright-v1
+            | 2018 © Create by Tachid  
+            a(target='_blank', href='https://github.com/Telexine/Node-GC-CI') Github
         // BEGIN QUICK SIDEBAR TOGGLER
         button.quick-sidebar-toggler(type='button', data-toggle='collapse')
             span.sr-only Toggle Quick Sidebar
