--- a/layouts/home.pug
+++ b/layouts/home.pug
@@ -6,7 +6,7 @@ html
 					// BEGIN BREADCRUMBS
 					ul.page-breadcrumb
 						li
-							a(href='#') Create Unit tested
+							a(href='#') Create Unit Test
 					// END BREADCRUMBS
 					.content-header-menu
 						// BEGIN DROPDOWN AJAX MENU
@@ -219,13 +219,6 @@ html
 									span.caption-subject.font-red.bold.uppercase
 										| Ci Wizard -
 										span.step-title  Step 1 of 4 
-								.actions
-									a.btn.btn-circle.btn-icon-only.btn-default(href='javascript:;')
-										i.icon-cloud-upload
-									a.btn.btn-circle.btn-icon-only.btn-default(href='javascript:;')
-										i.icon-wrench
-									a.btn.btn-circle.btn-icon-only.btn-default(href='javascript:;')
-										i.icon-trash
 							.portlet-body.form
 								form#submit_form.form-horizontal(action='#', method='POST')
 									.form-wizard
@@ -288,21 +281,12 @@ html
 																	span.box
 																	|  Node JS
 															.md-checkbox.has-error
-																input#checkboxMongod.md-check(type='checkbox')
-																label(for='checkboxMongod')
+																input#checkExpress.md-check(type='checkbox')
+																label(for='checkExpress')
 																	span
 																	span.check
 																	span.box
-																	|  Mongodb
-															.md-checkbox.has-info
-																input#checkboxMysql.md-check(type='checkbox')
-																label(for='checkboxMysql')
-																	span
-																	span.check
-																	span.box
-																	|  My sql
-
-
+																	|  Express
 												#tab2.tab-pane
 													h3.block Provide your profile details
 													.form-group(style='display:none')
@@ -364,21 +348,12 @@ html
 													a.btn.green.button-submit(href='javascript:;')
 														| Submit
 														i.fa.fa-check
-											
 
-
-
-
-
-
-						p
-							| A black page template with a minimal dependency assets to use as a base for any custom page you create
 					// END PAGE BASE CONTENT
 				// BEGIN FOOTER
 				p.copyright-v2
-					| 2016 © Metronic Theme By
-					a(target='_blank', href='http://keenthemes.com') Keenthemes
-					a(href=' ', title=' data', target='_blank') data!
+					| 2018 © Create by Tachid  
+					a(target='_blank', href='https://github.com/Telexine/Node-GC-CI') Github
 				// BEGIN QUICK SIDEBAR TOGGLER
 				button.quick-sidebar-toggler(type='button', data-toggle='collapse')
 					span.sr-only Toggle Quick Sidebar
@@ -813,7 +788,6 @@ html
 											display: true,
 											scaleLabel: {
 												display: true,
-												labelString: 'Date'
 											},
 											ticks: {
 												major: {
