--- a/layouts/index.pug
+++ b/layouts/index.pug
@@ -112,13 +112,13 @@ html
                               clearInterval(t);
                               $('#btnRedStop').addClass("disabled");
                               btn.css("pointer-events", "none");
-                              // Load GC report 
 
+                              // Load GC report 
                               setTimeout(function (){
                                     // loade report page 
-                                $('#btncontinue').click();
-                                LoadAllGraph(currentBuild);
-                                 $('#codeBuild-controller').css("visibility", "hidden");
+                                    $('#btncontinue').click();
+                                    LoadAllGraph(currentBuild);
+                                    $('#codeBuild-controller').css("visibility", "hidden");
                               }, 1000); 
                         });
                          
@@ -166,15 +166,18 @@ html
                         switch(state){
                               case 'console': cmd.setAttribute("style","color:#32c146;");
                                     break;
-                              case 'error':  cmd.setAttribute("style","color:#d73a49;padding-top:20px");    
+                              case 'error':  cmd.setAttribute("style","color:#d73a49;padding-top:20px");  
+                                    clearInterval(t);
+                                    clearInterval(loadTimer);
                                     break;
                               case 'end': 
                                     c1.innerHTML ="";
                                     cmd.setAttribute("style","color:#FFFFF;padding-top:20px");  
                                     clearInterval(loadTimer);
+                                    clearInterval(t);
                                     build.text("Build Finished");
                                     $('.bufferload').attr("style","display:none;");
-                                    $('#btncontinue').attr("style","visibility:visible");
+                                    $('#btncontinue').attr("style","display:none");
                                     break;
 
                         }
