--- a/layouts/partials/footer.pug
+++ b/layouts/partials/footer.pug
@@ -1,1 +1,3 @@
     p.copyright-v2
+            | 2018 © Create by Tachid  
+            a(target='_blank', href='https://github.com/Telexine/Node-GC-CI') Github
