Implement login firebase Auth - improve UI

--- a/layouts/home.pug
+++ b/layouts/home.pug
@@ -1,6 +1,6 @@
 html
 		// BEGIN CONTAINER
-		.container-fluid
+		#mainContainer.container-fluid.blur
 			.page-content.page-content-popup
 				.page-content-fixed-header
 					// BEGIN BREADCRUMBS
