--- a/public/css/style.css
+++ b/public/css/style.css
@@ -132,3 +132,28 @@
     visibility: hidden;
     box-shadow: 0 2px 3px 2px rgba(0,0,0,.06);
 }
+
+/* OAUTH modal */
+
+#firebaseui-auth-container{
+  position: absolute;
+  margin: auto;
+  z-index: 10;
+  margin-left: 40%;
+  margin-top: 9em;
+}
+
+.username{
+  color: #aeb2c4;
+  padding-right: 10px;
+}
+/* container-fluid  */
+.blur{
+  animation: blur 3s forwards;
+}
+
+@-webkit-keyframes blur{
+  0% { -webkit-filter: blur(0px) brightness(100%);}
+50% { -webkit-filter: blur(5px) brightness(80%);}
+100% { -webkit-filter: blur(20px) brightness(70%);}
+}
