Update for Audit mode Improve UI

--- a/layouts/home.pug
+++ b/layouts/home.pug
@@ -274,19 +274,33 @@ html
 														label.control-label.col-md-3 
 															| Service Select
 														.md-checkbox-inline
-															.md-checkbox.has-success
-																input#checkboxNodeJS.md-check(type='checkbox', checked='')
-																label(for='checkboxNodeJS')
+															.md-checkbox.has-success(style="pointer-events: none;")
+																input#checkNodeJS.md-check(type='checkbox', checked='',style="pointer-events: none;")
+																label(for='checkNodeJS')
 																	span.check
 																	span.box
-																	|  Node JS
+																	|  Node JS GC
 															.md-checkbox.has-error
-																input#checkExpress.md-check(type='checkbox')
-																label(for='checkExpress')
+																input#checkedAudit.md-check(type='checkbox',onclick=("_audit=(_audit? false:true);"))
+																label(for='checkedAudit')
 																	span
 																	span.check
 																	span.box
-																	|  Express
+																	|  Audit
+													// BEGIN Portlet PORTLET
+													.portlet-title
+													.caption(style="color:#e73d4a;")
+														i.fa.fa-info-circle
+														|   Audit
+													.tools
+														a.collapse(href='javascript:;', data-original-title='', title='') 
+													.portlet-body.display-hide(style='display: block;')
+													p
+														| right now only support Express and must have this line  of code in it for specify enviroment port
+													.code_body.portlet-body(style="margin-top:20px;")
+														| app.set('port', process.env.PORT || 8080);<br>
+														| app.listen(app.get('port'));
+													// END Portlet PORTLET
 												#tab2.tab-pane
 													h3.block Provide your profile details
 													.form-group(style='display:none')
