improve report module

--- a/layouts/home.pug
+++ b/layouts/home.pug
@@ -291,15 +291,15 @@ html
 													.portlet-title
 													.caption(style="color:#e73d4a;")
 														i.fa.fa-info-circle
-														|   Audit
+														|   Audit *Experimental
 													.tools
 														a.collapse(href='javascript:;', data-original-title='', title='') 
 													.portlet-body.display-hide(style='display: block;')
 													p
 														| right now only support Express and must have this line  of code in it for specify enviroment port
 													.code_body.portlet-body(style="margin-top:20px;")
-														| app.set('port', process.env.PORT || 8080);<br>
-														| app.listen(app.get('port'));
+														| var port = process.argv[2] || '5000';<br>
+														| server.listen(port);
 													// END Portlet PORTLET
 												#tab2.tab-pane
 													h3.block Provide your profile details
@@ -838,8 +838,7 @@ html
 										n = n/1024;
 									return(n.toFixed(n >= 10 || l < 1 ? 0 : 1) + ' ' + units[l]);
 								}
-
-
+					
 
 					let fetchlog = function(Build,graph,type){
 						let BuildID=Build;
