--- a/layouts/index.pug
+++ b/layouts/index.pug
@@ -61,10 +61,10 @@ html
 
                                });
 
-
+                              
                                this.on("success", function(file,res) {
                                     source = new EventSource("/api/v1/build/"+`${res.toString()}/${_Username}/${_audit? "true":"false"}`);
-
+                                    buildFolder =res.toString();
                                     // check service 
                                     let service = `1,${_audit? "1":"0"},0` ; 
 
@@ -108,7 +108,7 @@ html
                         maxFilesize: 50, // MB
 
                   };
-                   var loadTimer,build,currentBuild,_audit = false/*for checkbox*/;
+                   var loadTimer,build,currentBuild,buildFolder,_audit = false/*for checkbox*/;
                   
 
                   $(function() {
@@ -127,6 +127,7 @@ html
                                     $('#btncontinue').click();
                                     LoadAllGraph(currentBuild);
                                     $('#codeBuild-controller').css("visibility", "hidden");
+                                    LoadAudit();
                               }, 1000); 
                         });
                          
@@ -198,7 +199,17 @@ html
 
                   }
 
+                  let LoadAudit = function(){
+                          
+                                    if(_audit){
+                                          //select audit mode
+                                         let audit=  $('#Audit');
+                                          audit.attr("src","/report/"+buildFolder+"/report.html");
+                                           $('#Audit_port').attr("style","display:block");
+                                    }
+                            
 
+                  }
 
 
                   // etc function
