--- a/public/css/style.css
+++ b/public/css/style.css
@@ -157,3 +157,18 @@
 50% { -webkit-filter: blur(5px) brightness(80%);}
 100% { -webkit-filter: blur(20px) brightness(70%);}
 }
+
+/*       AUDIT REPORT     */
+#Audit{
+
+  width: 100%;
+  height:1400px;
+
+}
+#Audit.fullScreen {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
